Version 1.0.0
--------------------------------------------------------------------
3 June 2008
+ Added TinyMCE in limited mode for creating note
+ Cleaned up note display
+ Name search properly searches display names now
+ User name passed by id
+ Unread notes italicized
+ Updated: javascript/search_user/head.js, templates/note.tpl,
   templates/note_style.css, ,templates/send_note.tpl, 
   templates/style.css

11 April 2008
+ Added autocomplete to user name entry.

Version 0.2.0
--------------------------------------------------------------------
4 April 2007
+ Updated to new translation functions.
+ Added German files.

Version 0.1.3
--------------------------------------------------------------------
19 February 2007
+ Added translate functions
+ Removed constructor references

Version 0.1.2
--------------------------------------------------------------------
6 November 2006
+ Added Delete and Close button to read page.
+ Notes now searches display names. User names are searched but only
  if permission is given by the admin.
+ Fixed bug with search user list. User id indexes were wrong.

Version 0.1.1
--------------------------------------------------------------------
23 October 2006
+ Fixed Notes problem with using the first name it could find if an
  exactly match could not be found

Version 0.1.0
--------------------------------------------------------------------
11 October 2006
+ Added reply where you read notes.
+ Added ability to associate notes to key item.
+ Fixed problem with using username from drop down

10 October 2006
+ Rewrite started. Can now send and receive notes from other users.